# mimic

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALLING.md  INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  Makefile  PLAN.md  README.md  RELEASE_GUIDE.md  VERSIONING.md  cobertura.xml  codex.yaml  dfx.json  rustfmt.toml
crates/icydb-base/: Cargo.toml
crates/icydb-base/benches/: all.rs
crates/icydb-base/src/: lib.rs
crates/icydb-base/src/sanitizer/: num.rs  time.rs  web.rs
crates/icydb-base/src/types/: bytes.rs  color.rs  geo.rs  hash.rs  ident.rs  lang.rs  mod.rs  num.rs  time.rs  web.rs
crates/icydb-base/src/validator/: bytes.rs  collection.rs  decimal.rs  hash.rs  len.rs  mod.rs  num.rs  web.rs
crates/icydb-macros/: Cargo.toml
crates/icydb-macros/src/: helper.rs  lib.rs  trait_kind.rs
crates/icydb-macros/src/imp/: add.rs  entity.rs  eq.rs  field_value.rs  field_values.rs  filterable.rs  from.rs  inherent.rs  num_cast.rs  ord.rs  sanitize.rs  store.rs  sub.rs  validate.rs  visitable.rs
crates/icydb-macros/src/node/: canister.rs  def.rs  entity.rs  enum.rs  field.rs  index.rs  item.rs  list.rs  map.rs  newtype.rs  record.rs  sanitizer.rs  set.rs  store.rs  traits.rs  tuple.rs  type.rs  validator.rs  value.rs
crates/icydb-macros/src/view/: entity.rs  helper.rs  item.rs  list.rs  map.rs  newtype.rs  set.rs  value.rs
crates/icydb-paths/: Cargo.toml
crates/icydb-paths/src/: lib.rs
crates/icydb-schema/: Cargo.toml
crates/icydb-schema/src/: lib.rs  types.rs  visit.rs
crates/icydb-schema/src/node/: arg.rs  canister.rs  def.rs  enum.rs  field.rs  index.rs  item.rs  list.rs  map.rs  mod.rs  newtype.rs  record.rs  sanitizer.rs  schema.rs  store.rs  value.rs
crates/mimic/: Cargo.toml
crates/mimic-test/: Cargo.toml  build.rs
crates/mimic-test/src/: db.rs  index.rs  lib.rs  merge.rs  metrics.rs  ops.rs  view_into.rs
crates/mimic-test/src/filter/: delete.rs  fixtures.rs  index.rs  load.rs
crates/mimic/benches/: all.rs  blob.rs  data_key.rs  sort_key.rs
crates/mimic/src/: dto.rs  error.rs  lib.rs  macros.rs  service.rs  traits.rs
crates/mimic/src/core/: db.rs  hash.rs  key.rs  mod.rs  reference.rs  serialize.rs  traits.rs  validate.rs  value.rs  view.rs  visit.rs
crates/mimic/src/data/: mod.rs  types.rs
crates/mimic/src/db/: hasher.rs  mod.rs  service.rs
crates/mimic/src/def/: kind.rs  mod.rs  traits.rs  visit.rs
crates/mimic/src/design/: mod.rs
crates/mimic/src/interface/: metrics.rs  mod.rs  query.rs  stats.rs  storage.rs
crates/mimic/src/metrics/: mod.rs
crates/mimic/src/obs/: mod.rs
crates/mimic/src/ops/: mod.rs  serialize.rs  traits.rs  types.rs  validate.rs  visit.rs
crates/mimic/src/schema/: mod.rs  types.rs  visit.rs
crates/mimic/src/types/: account.rs  blob.rs  date.rs  decimal.rs  def.rs  duration.rs  e18s.rs  e8s.rs  entity_key.rs  int.rs  key.rs  mod.rs  nat.rs  principal.rs  relation.rs  subaccount.rs  timestamp.rs  unit.rs
crates/mimic/src/utils/: time.rs
crates/mimic_build/: Cargo.toml
crates/mimic_build/src/: db.rs  fixtures.rs  lib.rs  macros.rs  metrics.rs  query.rs
crates/mimic_build/src/actor/: db.rs  fixtures.rs  metrics.rs  mod.rs  query.rs  stats.rs
crates/mimic_common/: Cargo.toml
crates/mimic_common/src/: error.rs  lib.rs
crates/mimic_common/src/case/: constant.rs  snake.rs
crates/mimic_common/src/utils/: hash.rs  mod.rs  rand.rs  time.rs
crates/mimic_declare/: Cargo.toml
crates/mimic_declare/src/: helper.rs  lib.rs  schema_traits.rs  trait_kind.rs  traits.rs  types.rs
crates/mimic_declare/src/codegen/: implementor.rs  mod.rs  strategy.rs
crates/mimic_declare/src/imp/: add.rs  create_view.rs  default.rs  entity.rs  entity_create.rs  entity_update.rs  enum_value.rs  field.rs  field_value.rs  field_values.rs  filterable.rs  from.rs  implementor.rs  inherent.rs  inner.rs  into.rs  mod.rs  num_cast.rs  partial_eq.rs  partial_ord.rs  sanitize.rs  store.rs  sub.rs  type_view.rs  update_view.rs  validate.rs  visitable.rs
crates/mimic_declare/src/node/: arg.rs  canister.rs  constant.rs  data_key.rs  def.rs  entity.rs  entity_id.rs  enum.rs  enum_value.rs  field.rs  index.rs  item.rs  list.rs  map.rs  mod.rs  newtype.rs  record.rs  sanitizer.rs  selector.rs  set.rs  store.rs  trait.rs  traits.rs  tuple.rs  type.rs  validator.rs  value.rs
crates/mimic_declare/src/node_traits/: mod.rs  traits.rs
crates/mimic_design/: Cargo.toml
crates/mimic_design/src/: helper.rs  lib.rs  schema.rs  traits.rs
crates/mimic_schema/: Cargo.toml
crates/mimic_schema/src/: lib.rs  types.rs  visit.rs
crates/mimic_tests/: Cargo.toml
crates/mimic_tests/canister/: Cargo.toml  build.rs
crates/mimic_tests/design/: Cargo.toml
crates/mimic_tests/src/: lib.rs
crates/test/: Cargo.toml  build.rs
crates/test/canister/: Cargo.toml  build.rs
crates/test/design/: Cargo.toml
crates/test/src/: db.rs  index.rs  lib.rs  merge.rs  metrics.rs  ops.rs
crates/test/tests/: Cargo.toml  mytest.rs
crates/test_design/: Cargo.toml
crates/test_design/src/: lib.rs
examples/installing/your-design-crate/: Cargo.toml
icydb/: Cargo.toml
icydb/src/: lib.rs
src/base/: Cargo.toml
src/base/src/: lib.rs
src/canisters/test/: Cargo.toml  build.rs
src/mimic/: Cargo.toml
src/mimic/api/: Cargo.toml
src/mimic/cdk-rename/: Cargo.toml
src/mimic/cli/: Cargo.toml
src/mimic/config/: Cargo.toml
src/mimic/db/: Cargo.toml
src/mimic/derive/: Cargo.toml
src/mimic/ic/: Cargo.toml
src/mimic/orm/: Cargo.toml
src/mimic/schema/: Cargo.toml
src/mimic/src/: ic.rs  lib.rs  macros.rs  traits.rs  visit.rs
src/mimic/state/: Cargo.toml
src/mimic/types/: Cargo.toml
src/mimic_base/: Cargo.toml
src/mimic_base/src/: lib.rs
src/mimic_build/: Cargo.toml
src/mimic_build/src/: lib.rs  macros.rs  schema.rs
src/mimic_cli/: Cargo.toml
src/mimic_cli/src/: lib.rs  main.rs
src/mimic_common/: Cargo.toml
src/mimic_common/src/: lib.rs  types.rs
src/types/: Cargo.toml
tests/: Cargo.toml  mytest.rs
tests/src/: lib.rs
tests/src/bench/: mod.rs  sort_key.rs
(+1552 files in other folders)
