[workspace]
members = [
    "crates/mimic",
    "crates/mimic_build",
    "crates/mimic_common",
    "crates/mimic_declare",
    "crates/mimic_schema",
    "crates/mimic_tests/canister",
    "crates/mimic_tests/design",
]
resolver = "2"

[workspace.package]
rust-version = "1.90.0"
edition = "2024"
version = "0.23.9"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "A type-safe, embedded ORM and schema system for the Internet Computer"
categories = ["database", "web-programming", "wasm"]

[workspace.dependencies]
candid = "0.10"
convert_case = "0.8"
ctor = "0.5"
darling = "0.21"
derive_more = { version = "2.0", default-features = false, features = ["full"] }
ic-cdk = "0.18.7"
icu = { git = "ssh://git@github.com/dragginzgame/icu.git", tag = "v0.12.1" }
mimic = { path = "crates/mimic" }
mimic_build = { path = "crates/mimic_build" }
mimic_common = { path = "crates/mimic_common" }
mimic_declare = { path = "crates/mimic_declare" }
mimic_schema = { path = "crates/mimic_schema" }
num-traits = { version = "0.2", default-features = false }
phonenumber = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
remain = "0.2"
rust_decimal = { version = "1.37", default-features = false, features = [
    "serde",
    "maths",
] }
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
syn = "2.0"
test_canister = { path = "crates/mimic_tests/canister" }
test_design = { path = "crates/mimic_tests/design" }
thiserror = "2.0"
# removed std because it imports rand.  serde feature doesn't compile without it
ulid = { version = "1.2", default-features = false }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }

# clippy
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# always warn
unnecessary_cast = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"

# always allow
doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
wildcard_imports = "allow"

# profiles
# we don't need release as it's a library

[profile.dev]
opt-level = 1          # Small speed-up, less aggressive than release
lto = false            # No link-time optimization in dev
codegen-units = 16     # More parallelism for faster compile
strip = "debuginfo"    # Remove debug sections from Wasm
debug = false          # Don't embed debug info in code
overflow-checks = true # Keep runtime overflow checks for safety
