[workspace]
members = [
    # Internal crates
    "crates/icydb-base",
    "crates/icydb-build",
    "crates/icydb-core",
    "crates/icydb-macros",
    "crates/icydb-schema",
    # Test-only crates
    "crates/test",
    "crates/test_design",
    # Public meta-crate
    "icydb",
]
resolver = "2"

[workspace.package]
rust-version = "1.91.1"
edition = "2024"
version = "0.0.1"
authors = ["borovan <84897664+borovan@users.noreply.github.com>"]
description = "IcyDB — A type-safe, embedded ORM and schema system for the Internet Computer"
categories = ["database", "web-programming", "wasm"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dragginzgame/icydb"

[workspace.dependencies]
candid = "0.10"
canic = "0.3.11"
canic-utils = "0.3.11"
chrono = { version = "0.4", default-features = false }
ctor = "0.6"
darling = "0.21"
derive_more = { version = "2.0", default-features = false, features = ["full"] }
ic-cdk = "0.19.0"
icydb = { path = "icydb" }
icydb-base = { path = "crates/icydb-base" }
icydb-build = { path = "crates/icydb-build" }
icydb-core = { path = "crates/icydb-core" }
icydb-macros = { path = "crates/icydb-macros" }
icydb-schema = { path = "crates/icydb-schema" }
num-traits = { version = "0.2", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
remain = "0.2"
rust_decimal = { version = "1.37", default-features = false, features = [
    "serde",
    "maths",
] }
serde = { version = "1.0", default-features = false }
serde_bytes = "0.11"
syn = "2.0"

# Test harnesses
test = { path = "crates/test" }
test_design = { path = "crates/test_design" }
thiserror = "2.0"

# ---------------------
#  CLIPPY CONFIGURATION
# ---------------------
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unnecessary_cast = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"

doc_markdown = "allow"
empty_line_after_doc_comments = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
wildcard_imports = "allow"

# ---------------------
#  PATCH SECTION
# ---------------------
# Only needed if you override crates.io during dev.
[patch.crates-io]
icydb = { path = "icydb" }
icydb-core = { path = "crates/icydb-core" }
icydb-macros = { path = "crates/icydb-macros" }
icydb-schema = { path = "crates/icydb-schema" }
icydb-build = { path = "crates/icydb-build" }
icydb-base = { path = "crates/icydb-base" }

# ---------------------
#  DEV PROFILE
# ---------------------
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
strip = "debuginfo"
debug = false
overflow-checks = true
