[package]
name = "icydb"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[dependencies]
icydb-core = { workspace = true }
icydb-macros = { workspace = true }
icydb-base = { workspace = true }
canic = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
remain = { workspace = true }

[features]
default = []

[lints]
workspace = true
