[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
orm = { workspace = true }
quote = { workspace = true }
test_schema = { workspace = true }

[[test]]
name = "mytest"
path = "mytest.rs"

#[[test]]
#name = "variant"
#path = "variant.rs"
