[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
mimic = { workspace = true }
mimic_base = { workspace = true }
test_design = { workspace = true }

[[test]]
name = "mytest"
path = "mytest.rs"

#[[test]]
#name = "variant"
#path = "variant.rs"
