[package]
name = "icydb-base"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
canic-utils = { workspace = true }
chrono = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
icydb-build = { workspace = true }
icydb-macros = { workspace = true }
icydb-schema = { workspace = true }
icydb-core = { workspace = true }
num-traits = { workspace = true }
remain = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[lints]
workspace = true

[[bench]]
name = "all"
path = "benches/all.rs"
harness = false
