[package]
name = "icydb-macros"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
derive_more = { workspace = true }
icydb-schema = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
canic-utils = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
