[package]
name = "icydb-paths"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
