[package]
name = "icydb-schema"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
darling = { workspace = true }
derive_more = { workspace = true }
canic-utils = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
