[package]
name = "mimic-test"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
canic = { workspace = true }
mimic = { workspace = true }
mimic-test-design = { workspace = true }

[build-dependencies]
canic = { workspace = true }
mimic = { workspace = true }
mimic_build = { workspace = true }
mimic-test-design = { workspace = true }

[lints]
workspace = true
