[package]
name = "mimic"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
candid = { workspace = true }
convert_case = { workspace = true }
ctor = { workspace = true }
darling = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
icu = { workspace = true }
num-traits = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
remain = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tinyrand = { workspace = true }
ulid = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
bencher = "0.1"

[lints]
workspace = true

[[bench]]
name = "all"
harness = false
