[package]
name = "mimic"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
icu = { workspace = true }
mimic_build = { workspace = true }
mimic_common = { workspace = true }
mimic_declare = { workspace = true }
mimic_schema = { workspace = true }
num-traits = { workspace = true }
remain = { workspace = true }
rust_decimal = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
bencher = "0.1"

[lints]
workspace = true

[[bench]]
name = "all"
harness = false
