[package]
name = "mimic"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
doctest = false

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
canic = { workspace = true }
mimic_build = { workspace = true }
mimic_common = { workspace = true }
mimic_declare = { workspace = true }
mimic_schema = { workspace = true }
num-traits = { workspace = true }
remain = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"

[lints]
workspace = true

[[bench]]
name = "all"
path = "benches/all.rs"
harness = false
