[package]
name = "mimic_build"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
darling = "0.20"
derive_more = { workspace = true }
mimic = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
remain = { workspace = true }
serde = { workspace = true }
syn = "2.0"

[lints]
workspace = true
