[package]
name = "mimic_common"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
candid = { workspace = true }
convert_case = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
tinyrand = { workspace = true }

[lints]
workspace = true
