[package]
name = "mimic_common"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
convert_case = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
