[package]
name = "mimic_declare"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
derive_more = { workspace = true }
mimic_schema = { workspace = true }
mimic_common = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }
tinyrand = { workspace = true }

[lints]
workspace = true
