[package]
name = "mimic_schema"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
derive_more = { workspace = true }
mimic_common = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
