[package]
name = "mimic_schema"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
derive_more = { workspace = true }
mimic_common = { workspace = true }
remain = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
