[package]
name = "mimic_schema"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
darling = { workspace = true }
derive_more = { workspace = true }
canic = { workspace = true }
mimic_common = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
