[package]
name = "mimic_tests"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
mimic = { workspace = true }
test_design = { workspace = true }
icu = { workspace = true }

[build-dependencies]
mimic = { workspace = true }
mimic_build = { workspace = true }
test_design = { workspace = true }

[lints]
workspace = true
