[package]
name = "test"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
ic-cdk = { workspace = true }
mimic = { workspace = true }
test_design = { workspace = true }

[build-dependencies]
canic = { workspace = true }
mimic = { workspace = true }
test_design = { workspace = true }
mimic_build = { workspace = true }

[lints]
workspace = true
