[package]
name = "test"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
ic-cdk = { workspace = true }
icydb = { workspace = true }
test_design = { workspace = true }

[build-dependencies]
canic = { workspace = true }
icydb = { workspace = true }
icydb-build = { workspace = true }
test_design = { workspace = true }

[lints]
workspace = true
