[package]
name = "test_design"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }

[dependencies]
candid = { workspace = true }
icydb = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
