[package]
name = "base"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
macros = { workspace = true }
lib_cbor = { workspace = true }
ic = { workspace = true }
mimic = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
sha2 = { workspace = true }
