[package]
name = "base"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
mimic = { workspace = true }
mimic_common = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
sha2 = { workspace = true }
