[package]
name = "mimic"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
convert_case = { workspace = true }
ctor = { workspace = true }
defer = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
mimic_macros = { workspace = true }
num-traits = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
remain = { workspace = true }
rust_decimal = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tinyrand = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
