[package]
name = "mimic_base"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
candid = { workspace = true }
derive_more = { workspace = true }
ic = { workspace = true }
lib_case = { workspace = true }
mimic = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
semver = { workspace = true }
strum = { workspace = true }
