[package]
name = "mimic_base"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
mimic = { workspace = true }
mimic_design = { workspace = true }
num-traits = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
