[package]
name = "cli"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "mimicli"
path = "src/main.rs"

[dependencies]
mimic_base = { workspace = true }
clap = { workspace = true }
orm = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
orm_schema = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
