[package]
name = "mimic_cli"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "mimicli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
mimic_base = { workspace = true }
orm = { workspace = true }
orm_schema = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
