[package]
name = "mimic_common"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
candid = { workspace = true }
lib_case = { workspace = true }
lib_cbor = { workspace = true }
lib_ic = { workspace = true }
lib_rand = { workspace = true }
lib_time = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
