[package]
name = "mimic_common"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
lib_case = { workspace = true }
lib_cbor = { workspace = true }
ic = { workspace = true }
lib_rand = { workspace = true }
lib_time = { workspace = true }
