[package]
name = "mimic_common"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
candid = { workspace = true }
derive_more = { workspace = true }
syn = { workspace = true }
remain = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
