[package]
name = "canister_test"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
icu = { workspace = true }
mimic = { workspace = true }
test_design = { workspace = true }

[build-dependencies]
mimic = { workspace = true }
mimic_build = { workspace = true }
icu = { workspace = true }
test_design = { workspace = true }

[lints]
workspace = true
