[package]
name = "test_design"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
candid = { workspace = true }
ctor = { workspace = true }
derive_more = { workspace = true }
mimic = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
