[package]
name = "test_canister"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
icu = { workspace = true }
mimic = { workspace = true }
test_design = { path = "../../test/design" }

[build-dependencies]
mimic = { workspace = true }
test_design = { path = "../../test/design" }

[lints]
workspace = true
