[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
mimic = { workspace = true }
candid = { workspace = true }

[dev-dependencies]
test_design = { path = "../../test/design" }

[[test]]
name = "mytest"
path = "mytest.rs"

#[[test]]
#name = "variant"
#path = "variant.rs"
