[package]
name = "design"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
candid = { workspace = true }
derive_more = { workspace = true }
lib_string = { workspace = true }
mimic = { workspace = true }
mimic_base = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
