[package]
name = "canister_test"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
db = { workspace = true }
db_query = { workspace = true }
ic = { workspace = true }
ic-cdk = { workspace = true }
mimic = { workspace = true }
mimic_base = { workspace = true }
orm = { workspace = true }

[build-dependencies]
build = { workspace = true }
mimic = { workspace = true }
mimic_base = { workspace = true }
